--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "pre-deploy": "ng build",
+    "deploy": "gh-pages -d build"
   },
   "private": true,
+  "homepage": "http://joka-digital.github.io/animalprint",
   "dependencies": {
     "@angular/animations": "^14.1.0",
     "@angular/common": "^14.1.0",
